feat: gpytorch BGO

--- a/cookbook_ml/scipy.ipynb
+++ b/cookbook_ml/scipy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +115,173 @@
     "\n",
     "x_ori = sp.fft.ifft(y)\n",
     "x_ori"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "矩阵逆"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = np.array([[1.0, 2.0], [3.0, 4.0]])\n",
+    "\n",
+    "m_inv = np.linalg.inv(m)\n",
+    "m_inv_inv = np.linalg.inv(m_inv)\n",
+    "\n",
+    "np.allclose(m, m_inv_inv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m_inv_3 = sp.linalg.inv(m_inv_inv)\n",
+    "np.allclose(m_inv_3, m_inv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "病态矩阵的逆"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m_ill = np.array([[2, 4, 6], [2, 0, 2], [6, 8, 14]])\n",
+    "m_inv = np.linalg.inv(m_ill)\n",
+    "\n",
+    "np.allclose(m_inv @ m_ill, np.eye(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "矩阵条件数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m_ill:865988563411866752.00000\n",
+      "m:14.93303\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"m_ill:{np.linalg.cond(m_ill):.5f}\")\n",
+    "print(f\"m:{np.linalg.cond(m):.5f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVD矩阵分解\n",
+    "\n",
+    "It is also possible to detect ill-conditioning by inspecting the matrix’s singular values directly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ill-conditioned:865988563411866752.00000\n"
+     ]
+    }
+   ],
+   "source": [
+    "sigma = np.linalg.svd(m_ill, compute_uv=False)\n",
+    "print(f\"ill-conditioned:{sigma.max() / sigma.min():.5f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对非方阵求伪逆"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng = np.random.default_rng()\n",
+    "mn = rng.normal(size=(9, 6))\n",
+    "\n",
+    "mn_pinv = np.linalg.pinv(mn)\n",
+    "np.allclose(mn_pinv @ mn, np.eye(6))"
    ]
   }
  ],
